2009-05-25  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/resources/Messages.properties: Add
	RUnexpected to show generic unexpected information.
	* rt/net/sourceforge/jnlp/runtime/Boot.java (run): Show more
	information about the fatal exception.

2009-05-25  Xerxes Rånby  <xerxes@zafena.se>

	* acinclude.m4: Fix: Renamed TARGET_ARCH to CROSS_TARGET_ARCH
	to prevent unintended use by make builtin LINK.c rule.
	* Makefile.am: Likewise.
	* patches/icedtea-explicit-target-arch.patch: Likewise.

2009-05-22  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/JNLPFile.java (parse): Fix comment to reflect 
	that the element can be either 'java' or 'j2se'.
	* rt/net/sourceforge/jnlp/JREDesc.java: Fix comment to reflect a 'java'
	element. New private variable vmArgs to keep track of 'java-vm-args'.
	(JREDesc): Modify to take in an additional parameter vmArgs and store it in
	vmArgs.
	(getVMArgs): New function. Return the value of 'java-vm-args' attribute.
	* rt/net/sourceforge/jnlp/Parser.java: Fix comments to reflect either a
	'java' or 'j2se' element.
	(getResourceDesc): Treat 'java' element identically to 'j2se' element.
	(getJRE): Read in the value of the 'java-vm-args' attribute. 

2009-05-22  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	Include interpreterRuntime.hpp and scopeDesc.hpp.
	(ZeroStackPrinter::print_word): Decode bcx to get bci.

2009-05-22  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-zero.patch
	(vmError.cpp): Don't include interpreterRuntime.hpp here.
	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	Include interpreterRuntime.hpp and scopeDesc.hpp.
	(ZeroStackPrinter::print_word): Decode pc to get bci.

2009-05-21  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp:
	Fix for x86 debug builds.

2009-05-20  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/tools/JarSigner.java: Move creation of 