@@ -1,3 +1,10 @@
+2009-05-27  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.hpp
+	(SharkDecacher::location_type): New method.
+	(SharkDecacher::stack_location_type): Use the above.
+	(SharkDecacher::local_location_type): Use the above.
+
 2009-05-25  Omair Majid  <omajid@redhat.com>
 
 	* rt/net/sourceforge/jnlp/resources/Messages.properties: Add
